# jarvis

./: .gitignore  CMakeLists.txt
config/log/: log.conf
doc/xml/: PCManageTask.xml  msg.Identify.xml  msg.MsgReceivedMessage.xml  msg.Task.FolderContentGetter.xml  msg.Task.VolumeChange.xml  msg.Task.xml  msg.TaskFinished.xml  msg.TasksStarted.xml  msg.xml  task.xml
doc/xml/DirectoryEntryRenamer/: msg.Result.DirectoryEntryRenamer.xml  msg.Task.DirectoryEntryRenamer.xml
doc/xml/FolderContentGetter/: msg.Result.FolderContentGetter.xml  (+1 more)
include/: AbstractConstMap.hpp  AbstractEvent.hpp  Cient.hpp  Client.hpp  ClientManager.hpp  ComplexDataElement.hpp  ComplexXmlElement.hpp  ConstMap.hpp  CustonAllocHandler.hpp  DirectoryEntryRenamer.hpp  DirectoryEntryRenamerResult.hpp  EventsFactory.hpp  FolderContentGetter.hpp  FolderContentGetterResult.hpp  FolderMember.hpp  FolderMemberType.h  FolderMemberTypeMap.hpp  HandlerAllocator.hpp  IdentifyMessage.hpp  InputEnums.h  InputEvent.hpp  InputEventExecutor.hpp  InputEventType.h  InputEventTypeMap.hpp  InputEventsWorker.hpp  KbEvent.hpp  MapMirror.hpp  Message.hpp  MessageIdGenerator.hpp  MessageManager.hpp  MessageSender.hpp  MessageToSend.hpp  MessageTypeEnum.h  MessageTypeMap.hpp  MessagesToSendManager.hpp  MouseBtnEvent.hpp  MouseEventsWorker.hpp  MouseMoveEvent.hpp  MsgReceivedMessage.hpp  PersonalMessage.hpp  (+47 more)
include/windows/: InputEvent.hpp
src/: AbstractConstMap.hpp  AbstractEvent.hpp  AbstractEventFactory.hpp  CMakeLists.txt  ComplexXmlElement.hpp  ConstMap.cpp  ConstMap.hpp  DirectoryEntryRenamer.hpp  EventsFactory.hpp  FolderContentGetter.hpp  FolderContentGetterResult.hpp  FolderMember.cpp  FolderMember.hpp  FolderMemberType.h  FolderMemberTypeMap.cpp  FolderMemberTypeMap.hpp  InputEventDataExtractor.hpp  InputEventTypeMap.cpp  InputEventTypeMap.hpp  InputEvents.hpp  InputEventsFactory.hpp  InputEventsWorker.cpp  InputEventsWorker.hpp  KbEvent.hpp  Message.cpp  Message.hpp  MessageIdGenerator.cpp  MessageIdGenerator.hpp  MessageManager.cpp  MessageSender.hpp  MessageToSend.hpp  MessageTypeMap.cpp  MessageTypeMap.hpp  MessagesToSendManager.hpp  MouseMoveEvent.hpp  MsgReceivedMessage.hpp  PersonalMessage.hpp  Point2d.hpp  RequestHandler.hpp  Server.hpp  (+35 more)
src/linux/: EventFactory.hpp  InputEvent.cpp  InputEvent.hpp  InputEvents.hpp  KbEvent.hpp  MouseBtnEvent.hpp  MouseMoveEvent.hpp  WriteTextEvent.hpp
src/rapidxml/: rapidxml_print.hpp
src/tinyxml/: tinyxml2.cpp
src/windows/: EventsFactory.hpp  KbEvent.hpp  MouseBtnEvent.hpp  MouseMoveEvent.hpp  WriteTextEvent.hpp
(+4 files in other folders)
